add DiffQMapExtension extract SetupQMapState and check it in an upToDateWhen check